<resources>
    <string name="app_name">CheckInJourney</string>
    <string name="title_hint">Journey Topic Title</string>
    <string name="price_hint">Trip expense</string>
    <string name="desc_hint">What is on your mind?</string>
    <string name="button_post">Post</string>
    <string name="button_map">MapView</string>
    <string name="new_post_snackbar">Thanks for posting!</string>
    <string name="title_activity_browse_posts">BrowsePostsActivity</string>
    <string name="add_new_picture">Add Picture</string>

    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This app needs camera permission.</string>
    <string name="pick_picture_camera">take camera</string>
    <string name="pick_picture_gallery">picture gallery</string>
    <string name="title_activity_video">Video</string>
    <string name="title_activity_youtube">YoutubeActivity</string>
    <string name="title_txt">Journey Title : </string>
    <string name="price_txt">Trip expense : $ </string>
    <string name="mood_txt">Feeling Rate : </string>
    <string name="desc_txt"></string>

    <string name="search_title">Search </string>
    <string name="app_label"> Search Feature</string>
    <string name="search_hint">Search title</string>
    <string name="search_view">Enter search</string>
</resources>
