<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/myCoordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Here are the existing layout elements, now wrapped in
         a CoordinatorLayout -->
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:fillViewport="false">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="com.example.hypergaragesale.PostInfoActivity">
        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_txt"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:paddingTop="@dimen/activity_vertical_margin"
               />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_hint"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:id="@+id/textView_title" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price_txt"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:paddingTop="@dimen/activity_vertical_margin"
         />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price_hint"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:id="@+id/textView_price" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/desc_txt"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:paddingTop="@dimen/activity_vertical_margin"
          />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/desc_hint"
            android:id="@+id/textView_desc"
            />
        </LinearLayout>
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           >
           <LinearLayout
               android:id="@+id/camera1"
               android:layout_width="match_parent"
               android:layout_height="250dp"
               android:orientation="vertical"
               android:gravity="center_horizontal"
               android:layout_marginTop="20dp"
               android:layout_marginLeft="20dp"
               android:layout_marginRight="20dp"
               >
               <com.google.android.gms.maps.MapView
                   android:id="@+id/fragment_embedded_map_view_mapview"
                   android:layout_width="match_parent"
                   android:layout_height="0dp"
                   android:layout_weight="1"/>

           </LinearLayout>
       </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/linearMain"></LinearLayout>
        <!--<Button-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/button_post"-->
            <!--android:id="@+id/button"-->
            <!--android:onClick="newPostAdded"-->
            <!--android:layout_gravity="right" />-->

    </LinearLayout>
</ScrollView>
</android.support.design.widget.CoordinatorLayout>
