<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/myCoordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Here are the existing layout elements, now wrapped in
         a CoordinatorLayout -->
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:fillViewport="false">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="com.example.hypergaragesale.NewPostActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_hint"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:id="@+id/textView_title" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price_hint"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:id="@+id/textView_price" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="top"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:hint="@string/desc_hint"
            android:id="@+id/textView_desc"
            />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="location"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:id="@+id/location" />
           <ImageButton
             android:id="@+id/map"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/transparent"
             android:layout_gravity="right"
             android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
             android:paddingBottom="8dp"
             android:src="@mipmap/ic_maps_place"
             />
            </RelativeLayout>
        <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           >
           <Button
               android:id="@+id/upload"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:text="@string/add_new_picture"
               />
       </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/linearMain"></LinearLayout>
        <!--<Button-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/button_post"-->
            <!--android:id="@+id/button"-->
            <!--android:onClick="newPostAdded"-->
            <!--android:layout_gravity="right" />-->

    </LinearLayout>
</ScrollView>
</android.support.design.widget.CoordinatorLayout>
